--- a/src/main/resources/templates/printIssue.html
+++ b/src/main/resources/templates/printIssue.html
@@ -5,6 +5,6 @@
         <title>Issue</title>
     </head>
     <body>
-        <h1 th:inline="text">Issuer is: [[${issue.creatorName}]]</h1>
+        <p th:inline="text">Issuer is: [[${issue.creatorName}]]</p>
     </body>
 </html>
