--- a/src/main/resources/templates/printIssue.html
+++ b/src/main/resources/templates/printIssue.html
@@ -5,6 +5,9 @@
         <title>Issue</title>
     </head>
     <body>
-        <p th:inline="text">Issuer is: [[${issue.creatorName}]]</p>
+        <p th:inline="text">Issue ID: [[${issue.id}]]</p>
+        <p th:inline="text">Issue name [[${issue.issue}]]</p>
+        <p th:inline="text">Issue creator: [[${issue.creatorName}]]</p>
+
     </body>
 </html>
