--- a/src/main/resources/templates/getIssueResult.html
+++ b/src/main/resources/templates/getIssueResult.html
@@ -5,9 +5,8 @@
         <title>Issue</title>
     </head>
     <body>
-        <p th:inline="text">Issue ID: [[${issue.id}]]</p>
-        <p th:inline="text">Issue name [[${issue.issue}]]</p>
-        <p th:inline="text">Issue creator: [[${issue.creatorName}]]</p>
-
+        <p th:inline="text">Issue ID: [[${foundIssue.id}]]</p>
+        <p th:inline="text">Issue name [[${foundIssue.issue}]]</p>
+        <p th:inline="text">Issue creator: [[${foundIssue.creatorName}]]</p>
     </body>
 </html>
