--- a/src/main/resources/templates/getIssueResult.html
+++ b/src/main/resources/templates/getIssueResult.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
-        <title>Issue</title>
+        <title>Issue [[${foundIssue.id}]]</title>
     </head>
     <body>
         <p th:inline="text">Issue ID: [[${foundIssue.id}]]</p>
