--- a/src/main/resources/templates/insertIssueResult.html
+++ b/src/main/resources/templates/insertIssueResult.html
@@ -5,6 +5,6 @@
     <title>Insert Issue</title>
 </head>
 <body>
-  <p> Issue ${issue.id} inserted</p>
+  <p> Issue [[${issue.id}]] inserted</p>
 </body>
 </html>
