--- a/src/main/resources/templates/getIssueResult.html
+++ b/src/main/resources/templates/getIssueResult.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <p th:inline="text">Issue ID: [[${foundIssue.id}]]</p>
-        <p th:inline="text">Issue name [[${foundIssue.issue}]]</p>
+        <p th:inline="text">Issue name [[${foundIssue.issueDesc}]]</p>
         <p th:inline="text">Issue creator: [[${foundIssue.creatorName}]]</p>
     </body>
 </html>
