--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,8 +11,8 @@
         <p>Click <a th:href="@{/get_issues}">here</a> to view all issues</p>
         <p>Click <a th:href="@{/get_issue}">here</a> to find an issue by ID</p>
         <p>Click <a th:href="@{/insert_issue}">here</a> to insert a new issue</p>
-        <p>Click <a th:href="@{/}">here</a> to insert 1 issue</p>
-        <p>Click <a th:href="@{/}">here</a> to insert N issues</p>
+        <p>Click <a th:href="@{/add_one}">here</a> to insert 1 issue</p>
+        <p>Click <a th:href="@{/add_many}">here</a> to insert N issues</p>
 
 </body>
 </html>
