--- a/src/main/resources/templates/addManyResult.html
+++ b/src/main/resources/templates/addManyResult.html
@@ -6,5 +6,6 @@
 </head>
 <body>
   <p>Added [[${numToCreate.numToCreate}]] issues</p>
+  <p><a th:href="@{/}">Return to home</a></p>
 </body>
 </html>
