--- a/src/main/resources/templates/getIssueResult.html
+++ b/src/main/resources/templates/getIssueResult.html
@@ -8,5 +8,6 @@
         <p th:inline="text">Issue ID: [[${foundIssue.id}]]</p>
         <p th:inline="text">Issue name [[${foundIssue.issueDesc}]]</p>
         <p th:inline="text">Issue creator: [[${foundIssue.creatorName}]]</p>
+        <p><a th:href="@{/}">Return to home</a></p>
     </body>
 </html>
