--- a/src/main/resources/templates/printIssues.html
+++ b/src/main/resources/templates/printIssues.html
@@ -17,5 +17,6 @@
                 <td class="align-middle" th:text="${issue.creatorName}"></td>
             </tr>
         </table>
+        <p><a th:href="@{/}">Return to home</a></p>
     </body>
 </html>
