--- a/src/main/resources/templates/addOne.html
+++ b/src/main/resources/templates/addOne.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Add One</title>
 </head>
 <body>
     <p>Added one for a total of [[${count}]] issues</p>
+    <p><a th:href="@{/}">Return to home</a></p>
 </body>
 </html>
