--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,9 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Home
-        <!-- Error message --->
-    </title>
+    <title>Home</title>
 </head>
 <body>
         <h1>Home</h1>
