removed indent in home

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,5 +14,5 @@
 <!--        <form th:action="@{/localhost:8080/logout}" method="post">
             <input type="submit" value="Sign Out"/>
         </form>-->
-</body>
+</body>-
 </html>
