--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,8 +11,5 @@
         <p>Click <a th:href="@{/insert_issue}">here</a> to insert a new issue</p>
         <p>Click <a th:href="@{/add_one}">here</a> to insert 1 issue</p>
         <p>Click <a th:href="@{/add_many}">here</a> to insert N issues</p>
-<!--        <form th:action="@{/signout}" method="post">
-            <input type="submit" value="Sign Out"/>
-        </form>&ndash;&gt;-->
-</body>-
+</body>
 </html>
